--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -38,10 +38,10 @@
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "71914d5b-8b69-4a14-a9be-ded2b0e63055",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "71914d5b-8b69-4a14-a9be-ded2b0e63055"
       },
       "outputs": [
         {
@@ -63,14 +63,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78a4bf44-5ab7-4b47-8b6e-6137c217440e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "a+b+c\n"
       ]
     },
     {
