--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -94,14 +94,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "680302f5-58ee-405c-9202-7c3935e874d2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'> <class 'list'> <class 'float'> <class 'str'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "a=5\n",
+        "subject=[\"math\",\"sci\",\"phy\"]\n",
+        "decnum=5.46\n",
+        "name=\"potti\"\n",
+        "print(type(a),type(subject),type(decnum),type(name))\n",
+        "\n"
       ]
     },
     {
