--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -124,14 +124,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cab2c8b9-b9df-4d2c-d024-4ba8b469f0a1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15 50 5 0.5 -5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=5\n",
+        "b=10\n",
+        "print((a+b),(a*b),(a%b),(a/b),(a-b))"
       ]
     },
     {
