--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -151,14 +151,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9ca8f1a-bb2d-4821-d625-c58193d5a06f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "12.34\n",
+            "<class 'int'> <class 'float'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "a= 123\n",
+        "string2=\"12.34\"\n",
+        "num1 = int(a)\n",
+        "num2 =float(string2)\n",
+        "print(num1)\n",
+        "print(num2)\n",
+        "print(type(num1),type(num2))"
       ]
     },
     {
