--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -184,14 +184,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b22915a3-406f-45c5-9fc6-9237f9d32f65"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "h\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "string=\"hello world!\"\n",
+        "character=string[0]\n",
+        "print(character)"
       ]
     },
     {
