--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -211,14 +211,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "df815f15-ad39-4818-fac5-e25bec49f243"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "str='mango'\n",
+        "print(len(str))"
       ]
     },
     {
