--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -237,14 +237,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "93d16c37-2c61-4335-e617-6047cf088667"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "str=\"hello431\"\n",
+        "print(str.isalpha())"
       ]
     },
     {
