--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jhanu12345/226P1A05C6-JHANU/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -38,10 +48,10 @@
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "8e24f1ce-5545-4b71-adac-a07392d75705",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "71914d5b-8b69-4a14-a9be-ded2b0e63055"
+        }
       },
       "outputs": [
         {
@@ -63,202 +73,96 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [],
+      "metadata": {
+        "id": "Fs5PJZrNAZq9"
+      },
+      "id": "Fs5PJZrNAZq9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "78a4bf44-5ab7-4b47-8b6e-6137c217440e"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "c=15\n",
-        "a+b+c\n"
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "680302f5-58ee-405c-9202-7c3935e874d2"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'> <class 'list'> <class 'float'> <class 'str'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
-        "a=5\n",
-        "subject=[\"math\",\"sci\",\"phy\"]\n",
-        "decnum=5.46\n",
-        "name=\"potti\"\n",
-        "print(type(a),type(subject),type(decnum),type(name))\n",
-        "\n"
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cab2c8b9-b9df-4d2c-d024-4ba8b469f0a1"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15 50 5 0.5 -5\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
-        "a=5\n",
-        "b=10\n",
-        "print((a+b),(a*b),(a%b),(a/b),(a-b))"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c9ca8f1a-bb2d-4821-d625-c58193d5a06f"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "123\n",
-            "12.34\n",
-            "<class 'int'> <class 'float'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
-        "a= 123\n",
-        "string2=\"12.34\"\n",
-        "num1 = int(a)\n",
-        "num2 =float(string2)\n",
-        "print(num1)\n",
-        "print(num2)\n",
-        "print(type(num1),type(num2))"
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b22915a3-406f-45c5-9fc6-9237f9d32f65"
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "h\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
-        "string=\"hello world!\"\n",
-        "character=string[0]\n",
-        "print(character)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "df815f15-ad39-4818-fac5-e25bec49f243"
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)\n",
-        "str='mango'\n",
-        "print(len(str))"
+        "# Write a Python program to print the length of a string. (User input for the string)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "93d16c37-2c61-4335-e617-6047cf088667"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets.\n",
-        "str=\"hello431\"\n",
-        "print(str.isalpha())"
+        "# Write a Python program to check if a given string contains only alphabets."
       ]
     },
     {
@@ -1127,7 +1031,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
