--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
@@ -73,36 +73,65 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Fs5PJZrNAZq9"
-      },
-      "id": "Fs5PJZrNAZq9",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f3042da-450a-4be0-a078-5c2b3ecca07b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "a+b+c"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6fa22ba0-f6b6-4bf6-fee9-6f1b6bf0ce1e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'> <class 'list'> <class 'float'> <class 'str'> <class 'tuple'> <class 'dict'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "a=5\n",
+        "subject=[\"math\",\"phy\",\"bio\"]\n",
+        "decnum=5.67\n",
+        "name=\"item potti\"\n",
+        "fruits=(\"apple\",\"mango\",\"orange\")\n",
+        "dict={a:1,b:2,c:3}\n",
+        "\n",
+        "print(type(a),type(subject),type(decnum),type(name),type(fruits),type(dict))"
       ]
     },
     {
