--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
         "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
@@ -104,21 +104,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
         "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6fa22ba0-f6b6-4bf6-fee9-6f1b6bf0ce1e"
+        "outputId": "23c22128-5b7c-48c4-9f7f-d777900049f8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'> <class 'list'> <class 'float'> <class 'str'> <class 'tuple'> <class 'dict'>\n"
+            "<class 'int'> <class 'list'> <class 'float'> <class 'str'> <class 'tuple'> <class 'dict'> <class 'set'>\n"
           ]
         }
       ],
@@ -130,20 +130,44 @@
         "name=\"item potti\"\n",
         "fruits=(\"apple\",\"mango\",\"orange\")\n",
         "dict={a:1,b:2,c:3}\n",
+        "set={12,23,45.67}\n",
         "\n",
-        "print(type(a),type(subject),type(decnum),type(name),type(fruits),type(dict))"
+        "print(type(a),type(subject),type(decnum),type(name),type(fruits),type(dict),type(set))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "3b179a37-7b61-4c48-b3b2-08f067638f8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24\n",
+            "-4\n",
+            "140\n",
+            "0.7142857142857143\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=10\n",
+        "b=14\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)\n",
+        "print(a%b)"
       ]
     },
     {
