--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
         "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
         "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
@@ -172,14 +172,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "941d7dc7-ca6f-4bcd-ab96-71cae713a4a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "before Type casting: <class 'str'>\n",
+            "after tyoe casting: <class 'int'>\n",
+            "before type casting: <class 'str'>\n",
+            "after type casting: <class 'float'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "str1=\"123\"\n",
+        "print(\"before Type casting:\",type(str1))\n",
+        "str1=int(str1)\n",
+        "print(\"after tyoe casting:\",type(str1))\n",
+        "str2=\"1234\"\n",
+        "print(\"before type casting:\",type(str2))\n",
+        "str2=float(str2)\n",
+        "print(\"after type casting:\",type(str2))\n"
       ]
     },
     {
