--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
         "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
         "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
@@ -293,14 +293,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "8cc5e395-6007-471e-c48a-e10d3cc102c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Concatenate: jhanusony\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "from typing import Concatenate\n",
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "a=\"jhanu\"\n",
+        "b=\"sony\"\n",
+        "print(\"Concatenate:\",a+b)\n"
       ]
     },
     {
@@ -312,7 +328,10 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "num=\"jhanu\"\n",
+        "num1=\"abc\"\n",
+        "index=\n"
       ]
     },
     {
