--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -207,15 +207,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
         "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-        "outputId": "1069ebe7-c83c-4515-9e4e-f964f9181d0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "1069ebe7-c83c-4515-9e4e-f964f9181d0b"
       },
       "outputs": [
         {
@@ -240,14 +240,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-        "outputId": "97997d2c-9d86-48a9-a683-7835a4a09fc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "97997d2c-9d86-48a9-a683-7835a4a09fc9"
       },
       "outputs": [
         {
@@ -266,14 +266,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
         "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
-        "outputId": "b3c75884-169d-454c-ee67-73f74c5f4b2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b3c75884-169d-454c-ee67-73f74c5f4b2b"
       },
       "outputs": [
         {
@@ -293,30 +293,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-        "outputId": "8cc5e395-6007-471e-c48a-e10d3cc102c1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Concatenate: jhanusony\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from typing import Concatenate\n",
-        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
-        "a=\"jhanu\"\n",
-        "b=\"sony\"\n",
-        "print(\"Concatenate:\",a+b)\n"
+        "# Write a Python program to concatenate two strings. (User input for the strings)"
       ]
     },
     {
@@ -328,10 +312,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
-        "num=\"jhanu\"\n",
-        "num1=\"abc\"\n",
-        "index=\n"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
       ]
     },
     {
